Erstatter .collect(Collectors.toList()) med .toList()